--- a/drumstick.html
+++ b/drumstick.html
@@ -263,7 +263,7 @@
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://wa.me/918780388789"><i class="fa-brands fa-whatsapp"></i></a>
           </div>
           <ul class="list-inline text-white">
               <li class="list-inline-item"><a href="index.html">Home</a></li>
