index file change number

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
               <div class="card cardcolor text-white border-0 ms-3" >
                   <img src="assets/images/LOGO.jpg" class="p-4 img-fluid"  alt="...">
                   <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text"> pramukh Exim.</p>
                     <h5 class="card-title fw-bolder h3">FOLLOW US</h5>
                    <div class="d-flex pt-2 w-75">
                       <div class="rounded-circle h-25 w-25 facebook text-center ms-1 ">
