--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
               <div class="boxx mt-4 mb-0">
                 <i class="fa-solid fa-phone-volume"></i>
                 <h3>Call Us</h3>
-                <p>+91 6352 4115 15<br />+91 8780 388 789</p>
+                <p>+91 8780 388 789</p>
               </div>
             </div>
           </div>
@@ -520,7 +520,7 @@
                       <div class="rounded-circle h-25 w-25 bg-success text-center ms-1 ">
                         <a href="https://wa.me/918780388789" target="_blank" class="text-decoration-none text-white fw-bolder fs-3"><i class="fa-brands fa-whatsapp"></i>
                         </div>
-                      <div class="rounded-circle h-25 w-25 instagram text-center ms-1 "><a href="" class="text-decoration-none text-white fw-bolder fs-3"><i class="fa-brands fa-instagram"></i></a>
+                      <div class="rounded-circle h-25 w-25 instagram text-center ms-1 "><a href="https://www.instagram.com/pramukhexim/" target="_blank" class="text-decoration-none text-white fw-bolder fs-3"><i class="fa-brands fa-instagram"></i></a>
                       </div>
                    </div>
                   </div>
