--- a/banana.html
+++ b/banana.html
@@ -274,7 +274,7 @@
        <div class="footer-basic bg-black">
         <footer>
             <div class="social">
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/pramukhexim/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
               <a href="#"><i class="fa-brands fa-twitter"></i></a>
               <a href="https://wa.me/918780388789" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
