map location and adress

--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@
           </a>
         </div>
         
-        <div class="column cars col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column cars col-lg-4">
           <a href="mango.html" class="nav-link">
             <div class="content">
               <img src="assets/images/fresh-kesar-mango-1607515872-5652340.jpeg" alt="Car" style="width:100%">
@@ -314,8 +313,7 @@
             <h4>Mango</h4>
           </a>
         </div>
-        <div class="column cars col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column cars col-lg-4">
           <a href="banana.html#banana" class="text-decoration-none nav-link">
             <div class="content">
               <img src="assets/images/fresh-cavendish-banana-1607515654-5652333.jpeg" alt="Mountains" style="width:100%">
@@ -328,8 +326,7 @@
             <h4>Banana</h4>
            </a>
         </div>
-        <div class="column cars col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column cars col-lg-4">
           <a href="Pomegranate.html" class="nav-link">
             <div class="content">
               <img src="assets/images/fresh-pomegranate-1607515378-5652322.jpeg" alt="Car" style="width:100%">
@@ -343,38 +340,36 @@
           </a>
         </div>
       
-        <div class="column people col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column people col-lg-4">
           <div class="content">
             <img src="assets/images/chiken masal.jpg" alt="Car" style="width:100%">
             <h4>CHICKEN MASALA POWDER</h4>
             <p>Lorem ipsum dolor..</p>
           </div>
         </div>
-        <div class="column people col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column people col-lg-4"
+        >
           <div class="content">
           <img src="assets/images/CELERY SEEDS masala.jpg" alt="Car" style="width:100%">
             <h4>CELERY SEEDS</h4>
             <p>Lorem ipsum dolor..</p>
           </div>
         </div>
-        <div class="column people col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column people col-lg-4">
           <div class="content">
           <img src="assets/images/KASURI METH masala.jpg" alt="Car" style="width:100%">
             <h4>KASURI METHI</h4>
             <p>Lorem ipsum dolor..</p>
           </div>
         </div>
-        <div class="column people col-lg-4" data-aos="fade-up"  data-aos-duration="3000">
+        <div class="column people col-lg-4">
           <div class="content">
           <img src="assets/images/FUNGREEK SEEDS masala.jpg" alt="Car" style="width:100%">
             <h4>FUNGREEK SEEDS</h4>
             <p>Lorem ipsum dolor..</p>
           </div>
         </div>
-        <div class="column people col-lg-4" data-aos="fade-up" data-aos-duration="3000">
+        <div class="column people col-lg-4">
           <div class="content">
           <img src="assets/images/TUMERIC POWDER masala.jpg" alt="Car" style="width:100%">
             <h4>FUNGREEK SEEDS</h4>
@@ -406,12 +401,13 @@
     </div>
 
     <div>
-      <iframe
+      <!-- <iframe
         style="border: 0; width: 100%; height: 350px"
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
         frameborder="0"
         allowfullscreen=""
-      ></iframe>
+      ></iframe> -->
+      <iframe  style="border: 0; width: 100%; height: 350px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3688.4341704433796!2d70.04003878885493!3d22.412678700000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3957150d062c1161%3A0x4ab30e158553000!2sMARUTI%20BRASS%20PRODUCTS!5e0!3m2!1sen!2sin!4v1697889730887!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     <div class="container" data-aos="fade-up"
@@ -423,7 +419,7 @@
               <div class="boxx">
                 <i class="fa-solid fa-location-dot"></i>
                 <h3>Our Address</h3>
-                <p>A108 Adam Street, Jamanagar, NY 535022</p>
+                <p>GIDC PHASE OLOAT NO 4676, 361005, <br> JAMANAGAR, GUJARAT</p>
               </div>
             </div>
             <div class="col-md-6">
