--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
               <div class="boxx">
                 <i class="fa-solid fa-location-dot"></i>
                 <h3>Our Address</h3>
-                <p>GIDC PHASE OLOAT NO 4676, 361005, <br> JAMANAGAR, GUJARAT</p>
+                <p>GIDC PHASE PLOAT NO 4676, 361005, <br> JAMANAGAR, GUJARAT</p>
               </div>
             </div>
             <div class="col-md-6">
@@ -531,7 +531,7 @@
                       </span>
                       <div>
                           <p class="h3 fw-bolder">JAMNAGAR</p>
-                          <p > 5353 Road Avenue</p>
+                          <p >GIDC PHASE PLOAT NO 4676, 361005,</p>
                       </div>
                      </div>
                       <div>
