--- a/index.html
+++ b/index.html
@@ -77,13 +77,18 @@
                 <li>
                   <a class="dropdown-item" href="#gallery">Masala</a>
                 </li>
+               
               </ul>
             </li>
+            
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Product</a>
               </li> -->
             <li class="nav-item">
               <a class="nav-link" href="#gallery">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ceriti.html">Certificate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Contact">Contact</a>
