about file add ande link id

--- a/banana.html
+++ b/banana.html
@@ -271,24 +271,25 @@
 
        <!-- footer -->
 
-       <div class="footer-basic bg-black">
-        <footer>
-            <div class="social">
-              <a href="https://www.instagram.com/pramukhexim/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="https://wa.me/918780388789" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-            <ul class="list-inline text-white">
-                <li class="list-inline-item"><a href="index.html">Home</a></li>
-                <li class="list-inline-item"><a href="index.html#about">About</a></li>
-                <li class="list-inline-item"><a href="index.html#gallery">Gallery</a></li>
-                <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
-                
-            </ul>
-            <p class="copyright">PRAMUKHEXIM © 2018</p>
-        </footer>
-    </div>
+    <div class="footer-basic bg-black mt-5">
+      <footer>
+          <div class="social">
+            <a href="https://www.instagram.com/pramukhexim/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://wa.me/918780388789" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+          </div>
+          <ul class="list-inline text-white">
+              <li class="list-inline-item"><a href="index.html">Home</a></li>
+              <li class="list-inline-item"><a href="index.html#about">About</a></li>
+              <li class="list-inline-item"><a href="index.html#gallery">Gallery</a></li>
+              <li class="list-inline-item"><a href="ceriti.html">Certificate</a></li>
+              <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
+          </ul>
+          <p class="copyright">PRAMUKHEXIM © 2018</p>
+      </footer>
+  </div>
+
 
 
     <script
