--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         of their gardening. We make sure the best quality products with on-time
         delivery. We make sure for the freshest of produce by discussing with
         the quality growers who assist us to export the best and freshest
-        collection of the spe Read more...
+        collection of the spe <a href="About.html" class="btn btn-dark p-0">Read more...</a>
       </p>
 
 
@@ -543,12 +543,12 @@
                           <p class="fs-2 fw-bolder pt-4 useful">Useful Links</p>
       <div class="d-flex">
           <div >
-            <p>  <a href="" class="text-decoration-none text-white "> about us</a></p>
-            <p>  <a href="" class="text-decoration-none text-white"> our team</a></p>
+            <p>  <a href="About.html" class="text-decoration-none text-white "> about us</a></p>
+            <p>  <a href="ceriti.html" class="text-decoration-none text-white"> Certificate</a></p>
           </div>
           <div class="mx-5" >
-            <p>  <a href="" class="text-decoration-none text-white "> contact us</a></p>
-            <p>  <a href="" class="text-decoration-none text-white"> faq</a></p>
+            <p>  <a href="#Contact" class="text-decoration-none text-white "> contact us</a></p>
+            <p>  <a href="#gallery" class="text-decoration-none text-white">Gallery</a></p>
           </div>
       
       </div>
