--- a/ceriti.html
+++ b/ceriti.html
@@ -95,14 +95,17 @@
         }
     }
     .mxxx{
- margin-top: 100px;
+ margin-top: 60px;
+    }
+    .top{
+      margin-top: 100px;
     }
 </style>
 <body>
 
  <!-- header -->
 
- <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navbar">
+ <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
     <div class="container-fluid text-white">
       <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
       <button
@@ -119,7 +122,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
@@ -172,7 +175,7 @@
     </div>
   </nav>
 
-  <div class="mt-5 text-center ceti">
+  <div class="top text-center fs-1 fw-bolder">
     Certificate
   </div>
 
@@ -189,6 +192,9 @@
         </div>
         <div class="col-lg-4">
             <img class="myImg" src="assets/images/ImportersandExporterscode(IEC)745414.jpeg.jpg" alt="Another Image" style="width:100%;max-width:300px"; height="400px">
+            <div>
+              Import Exporter Code
+             </div>
         </div>
         <!-- <div class="col-lg-4">
             <img class="myImg" src="assets/images/fresh-green-chilli-1607515482-5652326.jpeg" alt="Yet Another Image" style="width:100%;max-width:300px; height:200px;">
@@ -206,31 +212,33 @@
     </div>
 
 
-    <div class="footer-basic bg-black">
-        <footer>
-            <div class="social">
-              <a href="https://www.instagram.com/pramukhexim/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="https://wa.me/918780388789" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-            <ul class="list-inline text-white">
-                <li class="list-inline-item"><a href="index.html">Home</a></li>
-                <li class="list-inline-item"><a href="index.html#about">About</a></li>
-                <li class="list-inline-item"><a href="index.html#gallery">Gallery</a></li>
-                <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
-                
-            </ul>
-            <p class="copyright">PRAMUKHEXIM © 2018</p>
-        </footer>
-    </div>
+    <!-- footer -->
+
+    <div class="footer-basic bg-black mt-5">
+      <footer>
+          <div class="social">
+            <a href="https://www.instagram.com/pramukhexim/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://wa.me/918780388789" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+          </div>
+          <ul class="list-inline text-white">
+              <li class="list-inline-item"><a href="index.html">Home</a></li>
+              <li class="list-inline-item"><a href="index.html#about">About</a></li>
+              <li class="list-inline-item"><a href="index.html#gallery">Gallery</a></li>
+              <li class="list-inline-item"><a href="ceriti.html">Certificate</a></li>
+              <li class="list-inline-item"><a href="index.html#Contact">Contact</a></li>
+          </ul>
+          <p class="copyright">PRAMUKHEXIM © 2018</p>
+      </footer>
+  </div>
 
     <script>
         var modal = document.getElementById("myModal");
         var images = document.querySelectorAll(".myImg");
         var modalImg = document.getElementById("img01");
         var captionText = document.querySelector(".caption");
-        let nav = document.getElementById("navbar")
+        let nav = document.getElementById("navba")
         
         // Add click event listener to each image
         images.forEach(function(img) {
