--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="About.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -159,7 +159,7 @@
           </p>
 
           <div class="btn-1">
-            <a href="" class="btn btn-dark me-2 button">MORE</a>
+            <a href="About.html" class="btn btn-dark me-2 button">MORE</a>
           </div>
         </div>
 
