--- a/About.html
+++ b/About.html
@@ -37,10 +37,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="About.html">About</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -53,11 +53,11 @@
                   Product
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#gallery">Fresh vegetabale</a></li>
-                  <li><a class="dropdown-item" href="#gallery">Fresh fruits</a></li>
+                  <li><a class="dropdown-item" href="index.html#gallery">Fresh vegetabale</a></li>
+                  <li><a class="dropdown-item" href="index.html#gallery">Fresh fruits</a></li>
                   <!-- <li><hr class="dropdown-divider" /></li> -->
                   <li>
-                    <a class="dropdown-item" href="#gallery">Masala</a>
+                    <a class="dropdown-item" href="index.html#gallery">Masala</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="ceriti.html">Certificate</a>
@@ -68,13 +68,13 @@
                   <a class="nav-link" href="#">Product</a>
                 </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="#gallery">Gallery</a>
+                <a class="nav-link" href="index.html#gallery">Gallery</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="ceriti.html">Certificate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Contact">Contact</a>
+                <a class="nav-link" href="index.html#Contact">Contact</a>
               </li>
             </ul>
             <!-- <form class="d-flex" role="search">
