--- a/ceriti.html
+++ b/ceriti.html
@@ -103,9 +103,7 @@
 </style>
 <body>
 
- <!-- header -->
-
- <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
+  <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
     <div class="container-fluid text-white">
       <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
       <button
@@ -125,7 +123,7 @@
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="About.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -138,11 +136,11 @@
               Product
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#gallery">Fresh vegetabale</a></li>
-              <li><a class="dropdown-item" href="#gallery">Fresh fruits</a></li>
+              <li><a class="dropdown-item" href="index.html#gallery">Fresh vegetabale</a></li>
+              <li><a class="dropdown-item" href="index.html#gallery">Fresh fruits</a></li>
               <!-- <li><hr class="dropdown-divider" /></li> -->
               <li>
-                <a class="dropdown-item" href="#gallery">Masala</a>
+                <a class="dropdown-item" href="index.html#gallery">Masala</a>
               </li>
               <li>
                 <a class="dropdown-item" href="ceriti.html">Certificate</a>
@@ -153,13 +151,13 @@
               <a class="nav-link" href="#">Product</a>
             </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#gallery">Gallery</a>
+            <a class="nav-link" href="index.html#gallery">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="ceriti.html">Certificate</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Contact">Contact</a>
+            <a class="nav-link" href="index.html#Contact">Contact</a>
           </li>
         </ul>
         <!-- <form class="d-flex" role="search">
