--- a/About.html
+++ b/About.html
@@ -11,6 +11,9 @@
     />
     <link rel="stylesheet" href="styale.css">
     <link rel="stylesheet" href="detail.css">
+
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <style>
 .top{
@@ -89,7 +92,8 @@
       </nav>
     
     <!--  about -->
-    <div class="container top">
+    <div class="container top" data-aos="fade-up"
+    data-aos-duration="3000">
    <div class="text-center fs-2 fw-bold border-bottom border-2">
     About Us
    </div>
@@ -169,7 +173,13 @@
     </div>
 
 
-    
+    <!-- scroll animation -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+
+  <script>
+    AOS.init();
+  </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
