--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
       </div>
       
       <!-- Portfolio Gallery Grid -->
-      <div class="row">
-        <div class="column nature col-md-4" data-aos="fade-up"
-        data-aos-duration="3000">
+      <div class="row" data-aos="fade-up"
+      data-aos-duration="3000">
+        <div class="column nature col-md-4">
          <a href="onion.html#onion" class="text-decoration-none nav-link">
           <div class="content">
             <img src="assets/images/fresh-red-onion-1607515951-5652344.jpeg" alt="Mountains" style="width:100%">
@@ -261,8 +261,7 @@
           <h4>Onion</h4>
         </a>
         </div>
-        <div class="column nature col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column nature col-lg-4">
           <a href="drumstick.html#drumestick" class="nav-link">
             <div class="content">
               <img src="assets/images/fresh-drumstick-1607515801-5652338.jpeg" alt="Lights" style="width:100%">
@@ -276,8 +275,7 @@
             <h4>Fresh Drumstick</h4>
           </a>
         </div>
-        <div class="column nature col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column nature col-lg-4">
           <a href="Chili.html" class="nav-link">
             <div class="content">
               <img src="assets//images/fresh-green-chilli-1607515482-5652326.jpeg" alt="Nature" style="width:100%">
@@ -290,8 +288,7 @@
             <h4>Fresh Green Chilli</h4>
           </a>
         </div>
-        <div class="column nature col-lg-4" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="column nature col-lg-4">
           <a href="tomoto.html" class="nav-link">
             <div class="content">
               <img src="assets//images/fresh-tomato-1607515730-5652336.jpeg" alt="Nature" style="width:100%">
@@ -393,8 +390,7 @@
     <!-- contact us -->
 
     <div class="container  top-main" id="Contact">
-      <div class="section-title text-center" data-aos="zoom-in"
-      data-aos-duration="3000">
+      <div class="section-title text-center" >
         <h2>Contact</h2>
         <p>
           Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
@@ -415,8 +411,7 @@
       <iframe  style="border: 0; width: 100%; height: 350px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3688.4341704433796!2d70.04003878885493!3d22.412678700000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3957150d062c1161%3A0x4ab30e158553000!2sMARUTI%20BRASS%20PRODUCTS!5e0!3m2!1sen!2sin!4v1697889730887!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-    <div class="container" data-aos="fade-up"
-    data-aos-duration="2000">
+    <div class="container">
       <div class="row mt-5">
         <div class="col-lg-6">
           <div class="row">
