--- a/ceriti.html
+++ b/ceriti.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="styale.css">
   <link rel="stylesheet" href="detail.css">
+  <!-- scrool animation -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -182,13 +184,13 @@
 
   
 
-        <div class="col-lg-4">
+        <div class="col-lg-4" data-aos="fade-down" data-aos-duration="3000">
             <img class="myImg" src="assets/images/GST CERTIFICATE_page-0001.jpg" alt="Snow" style="width:100%;max-width:300px">
             <div>
              GST   Certificate
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4" data-aos="fade-up" data-aos-duration="3000">
             <img class="myImg" src="assets/images/ImportersandExporterscode(IEC)745414.jpeg.jpg" alt="Another Image" style="width:100%;max-width:300px"; height="400px">
             <div>
               Import Exporter Code
@@ -258,6 +260,11 @@
 
         }
     </script>
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
