link all file header

--- a/About.html
+++ b/About.html
@@ -69,7 +69,7 @@
                   <a class="nav-link" href="#">Product</a>
                 </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="index.html#gallery">Gallery</a>
+                <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="ceriti.html">Certificate</a>
