--- a/Pomegranate.html
+++ b/Pomegranate.html
@@ -21,69 +21,73 @@
 
     <!-- header -->
 
-    <nav class="navbar navbar-expand-lg bg-black fixed-top">
-        <div class="container-fluid text-white">
-          <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Product
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Fresh vegetabale</a></li>
-                  <li><a class="dropdown-item" href="#">Fresh fruits</a></li>
-                  <!-- <li><hr class="dropdown-divider" /></li> -->
-                  <li>
-                    <a class="dropdown-item" href="#">Masala</a>
-                  </li>
-                </ul>
-              </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="#">Product</a>
-                </li> -->
-              <li class="nav-item">
-                <a class="nav-link" href="#">Gallery</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-            <!-- <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-primary" type="submit">Search</button>
-            </form> -->
-          </div>
+    <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
+      <div class="container-fluid text-white">
+        <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="About.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Product
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="index.html#gallery">Fresh vegetabale</a></li>
+                <li><a class="dropdown-item" href="index.html#gallery">Fresh fruits</a></li>
+                <!-- <li><hr class="dropdown-divider" /></li> -->
+                <li>
+                  <a class="dropdown-item" href="index.html#gallery">Masala</a>
+                </li>
+               
+              </ul>
+            </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ceriti.html">Certificate</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#Contact">Contact</a>
+            </li>
+          </ul>
+          <!-- <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-primary" type="submit">Search</button>
+          </form> -->
         </div>
-      </nav>
+      </div>
+    </nav>
   
 
 
@@ -176,11 +180,11 @@
           </div>
 
           <p>
-            The banana is one of the world’s favorite fruits. Thousands of years
-            of domestication of the banana’s wild ancestor has led to the
+            The Pomegranate is one of the world’s favorite fruits. Thousands of years
+            of domestication of the Pomegranate’s wild ancestor has led to the
             delicious, edible fruit that is consumed by millions worldwide
-            today. Whilst there are more than 1,000 banana varieties in the
-            world, the Cavendish banana populates supermarket shelves and makes
+            today. Whilst there are more than 1,000 Pomegranate varieties in the
+            world, the Cavendish Pomegranate populates supermarket shelves and makes
             up almost the entire global export market.
           </p>
         </div>
