--- a/drumstick.html
+++ b/drumstick.html
@@ -20,7 +20,7 @@
   <body>
     <!-- header -->
 
-    <nav class="navbar navbar-expand-lg bg-black fixed-top">
+    <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
       <div class="container-fluid text-white">
         <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
         <button
@@ -40,7 +40,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="About.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -53,33 +53,37 @@
                 Product
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Fresh vegetabale</a></li>
-                <li><a class="dropdown-item" href="#">Fresh fruits</a></li>
+                <li><a class="dropdown-item" href="index.html#gallery">Fresh vegetabale</a></li>
+                <li><a class="dropdown-item" href="index.html#gallery">Fresh fruits</a></li>
                 <!-- <li><hr class="dropdown-divider" /></li> -->
                 <li>
-                  <a class="dropdown-item" href="#">Masala</a>
+                  <a class="dropdown-item" href="index.html#gallery">Masala</a>
                 </li>
+               
               </ul>
             </li>
-            <!-- <li class="nav-item">
-                  <a class="nav-link" href="#">Product</a>
-                </li> -->
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
+              <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="ceriti.html">Certificate</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#Contact">Contact</a>
             </li>
           </ul>
           <!-- <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-primary" type="submit">Search</button>
-            </form> -->
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-primary" type="submit">Search</button>
+          </form> -->
         </div>
       </div>
     </nav>
@@ -163,11 +167,11 @@
           </div>
 
           <p>
-            The banana is one of the world’s favorite fruits. Thousands of years
-            of domestication of the banana’s wild ancestor has led to the
+            The drumestick is one of the world’s favorite vegetabale. Thousands of years
+            of domestication of the drumestick’s wild ancestor has led to the
             delicious, edible fruit that is consumed by millions worldwide
             today. Whilst there are more than 1,000 banana varieties in the
-            world, the Cavendish banana populates supermarket shelves and makes
+            world, the Cavendish drumestick populates supermarket shelves and makes
             up almost the entire global export market.
           </p>
         </div>
