--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <a class="nav-link" href="#">Product</a>
               </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#gallery">Gallery</a>
+              <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="ceriti.html">Certificate</a>
