--- a/Chili.html
+++ b/Chili.html
@@ -222,7 +222,7 @@
           </div>
   
           <div class="col-lg-6">
-            <form action="" action="https://formsubmit.co/pramukhexim247@gmail.com" method="post" reset  class="php-email-form">
+            <form action="https://formsubmit.co/pramukhexim247@gmail.com" method="post" reset class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input
