--- a/index.html
+++ b/index.html
@@ -391,13 +391,13 @@
 
     <div class="container  top-main" id="Contact">
       <div class="section-title text-center" >
-        <h2>Contact</h2>
-        <p>
+        <h2 class="fs-1">Contact</h2>
+        <!-- <p>
           Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
           aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
           quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
           fugiat sit in iste officiis commodi quidem hic quas.
-        </p>
+        </p> -->
       </div>
     </div>
 
