--- a/banana.html
+++ b/banana.html
@@ -222,7 +222,7 @@
           </div>
   
           <div class="col-lg-6">
-            <form action="" class="php-email-form" action="https://formsubmit.co/pramukhexim247@gmail.com" method="post" reset >
+            <form action="https://formsubmit.co/pramukhexim247@gmail.com" method="post" reset class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input
