footer last comment

--- a/index.html
+++ b/index.html
@@ -582,12 +582,12 @@
           </div>
       </div>
       </div>
-      <div class="navfooter p-3 text-md-end text-sm-center">
+      <!-- <div class="navfooter p-3 text-md-end text-sm-center">
           <a href="" class="text-decoration-none text-white  ps-4"> home</a>
           <a href="#about" class="text-decoration-none text-white ps-4"> about</a>
           <a href="#gallery" class="text-decoration-none text-white ps-4"> Gallery</a>
           <a href="#Contact" class="text-decoration-none text-white ps-4"> contact</a>
-      </div>
+      </div> -->
       
 
 
