edit scroll bar

--- a/gallery.html
+++ b/gallery.html
@@ -112,6 +112,8 @@
     .top {
       margin-top: 100px;
     }
+
+    
   </style>
 
   <body>
@@ -209,7 +211,7 @@
         <h1>Vegetabale</h1>
       </div>
 
-      <div class="col-lg-3 mt-3">
+      <div class="col-lg-3 mt-3 card p-3">
         <img
           class="myImg"
           src="assets/images/fresh-red-onion-1607515951-5652344.jpeg"
@@ -218,10 +220,10 @@
         />
         <div class="d-flex">
           <a href="onion.html" class="fs-4 nav-link me-3">Onion</a>
-          <a href="onion.html" class="btn btn-dark p-1 mt-2">View Detail</a>
+          <a href="onion.html" class="btn btndark p-1 mt-2">View Detail</a>
         </div>
       </div>
-      <div class="col-lg-3 mt-3">
+      <div class="col-lg-3 mt-3 card">
         <img
           class="myImg"
           src="assets/images/fresh-drumstick-1607515801-5652338.jpeg"
