--- a/About.html
+++ b/About.html
@@ -21,9 +21,25 @@
 }
 
 </style>
-<body>
+<body onload="loadfunc()">
 
-    <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
+ 
+    <!-- loader -->
+    <div id="loader" class="load">
+      <div class="middle" id="middle">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+        <div class="bar bar4"></div>
+        <div class="bar bar5"></div>
+        <div class="bar bar6"></div>
+        <div class="bar bar7"></div>
+        <div class="bar bar8"></div>
+      </div>
+    </div>
+
+
+    <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navbar">
         <div class="container-fluid text-white">
           <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
           <button
@@ -176,6 +192,9 @@
     <!-- scroll animation -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+
+    
+    <script src="loader.js"></script>
 
   <script>
     AOS.init();
