--- a/index.html
+++ b/index.html
@@ -113,20 +113,20 @@
       <!-- Full-width assets/images with number and caption text -->
       <div class="mySlides carousel-fade">
         <div class="numbertext">1 / 3</div>
-        <img src="assets/images/bg-masala.jpg" style="width: 100%" />
+        <img src="assets/images/bg-masala.jpg" class="img-fluid" style="width: 100%" />
         <div class="text">Masala</div>
       </div>
 
       <div class="mySlides carousel-fade">
         <div class="numbertext">2 / 3</div>
-        <img src="assets/images/bg-vegetabale.jpg" style="width: 100%" />
+        <img src="assets/images/bg-vegetabale.jpg" class="img-fluid" style="width: 100%" />
         <div class="text">Vegetabale</div>
       </div>
 
       <div class="mySlides carousel-fade">
         <div class="numbertext">3 / 3</div>
-        <img src="assets/images/home_slide2.jpg" style="width: 100%" />
-        <div class="text">Caption Three</div>
+        <img src="assets/images/home_slide2.jpg" class="img-fluid" style="width: 100%" />
+        <div class="text">Masala</div>
       </div>
 
       <!-- Next and previous buttons -->
@@ -136,11 +136,11 @@
     <br />
 
     <!-- The dots/circles -->
-    <div style="text-align: center">
+    <!-- <div style="text-align: center">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
+    </div> -->
 
     <!-- about us -->
 
@@ -178,7 +178,7 @@
         <h1>WELCOME TO OUR WEBSITE</h1>
       </div>
 
-      <p class="text-justify">
+      <p class="text-justify fst-italic"  data-aos="zoom-in" data-aos-duration="1500">
         Pramukh Exim Established in the year 2018, Pramukh wxim is a Exporter,
         wholesaler & Producer of fresh fruits and vegetables based in Gujarat
         (India). The company endeavors to convey quality produce at the best
@@ -190,7 +190,7 @@
         of their gardening. We make sure the best quality products with on-time
         delivery. We make sure for the freshest of produce by discussing with
         the quality growers who assist us to export the best and freshest
-        collection of the spe <a href="About.html" class="btn btn-dark p-0">Read more...</a>
+        collection of the spe <a href="About.html" class="btn  p-0">Read more...</a>
       </p>
 
 
