--- a/About.html
+++ b/About.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PRAMUKHEXIM</title>
+    <link rel="shortcut icon" href="assets/images/LOGO.jpg"  type="image/xicon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link
       rel="stylesheet"
@@ -41,7 +42,8 @@
 
     <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navbar">
         <div class="container-fluid text-white">
-          <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
+          <img src="assets/images/LOGO-removebg-preview.png" class="bg-white img-fluid rounded rounded-3" style="width: 50px;"  >
+        <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -131,7 +133,7 @@
 
         <div class="row main-1 text-center top" data-aos="fade-up" data-aos-duration="2000">
             <div class="col-lg-4 mt-3">
-              <div class="shadow-lg p-3">
+              <div class="shadow-lg p-3 aaa">
                 <div class="icon">
                   <i class="fa-solid fa-hand-holding-heart"></i>
                 </div>
@@ -140,16 +142,16 @@
               </div>
             </div>
             <div class="col-lg-4 mt-3">
-              <div class="shadow-lg p-3">
+              <div class="shadow-lg p-3 aaa">
                 <div class="icon">
-                  <i class="fa-solid fa-hand-holding-heart"></i>
+                  <i class="fa-solid fa-city"></i>
                 </div>
                 <p class="text-grey mt-3 mb-0">Year of Establishment</p>
                 <p>2022</p>
               </div>
             </div>
             <div class="col-lg-4 mt-3">
-              <div class="shadow-lg p-3">
+              <div class="shadow-lg p-3 aaa">
                 <div class="icon">
                   <i class="fa-regular fa-user"></i>
                 </div>
