--- a/ceriti.html
+++ b/ceriti.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PRAMUKHEXIM</title>
+    <link rel="shortcut icon" href="assets/images/LOGO.jpg"  type="image/xicon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="styale.css">
   <link rel="stylesheet" href="detail.css">
@@ -107,7 +108,8 @@
 
   <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
     <div class="container-fluid text-white">
-      <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
+      <img src="assets/images/LOGO-removebg-preview.png" class="bg-white img-fluid rounded rounded-3" style="width: 50px;"  >
+        <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
       <button
         class="navbar-toggler"
         type="button"
