--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PRAMUKHEXIM</title>
+    <link rel="shortcut icon" href="assets/images/LOGO.jpg"  type="image/xicon">
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -40,6 +41,8 @@
 
     <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navbar">
       <div class="container-fluid text-white">
+       
+        <img src="assets/images/LOGO-removebg-preview.png" class="bg-white img-fluid rounded rounded-3" style="width: 50px;"  >
         <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
         <button
           class="navbar-toggler"
@@ -197,7 +200,7 @@
     
       <div class="row main-1 text-center" data-aos="fade-up" data-aos-duration="2000">
         <div class="col-lg-4 mt-3">
-          <div class="shadow-lg p-3">
+          <div class="shadow-lg p-3 aaa">
             <div class="icon">
               <i class="fa-solid fa-hand-holding-heart"></i>
             </div>
@@ -206,16 +209,16 @@
           </div>
         </div>
         <div class="col-lg-4 mt-3">
-          <div class="shadow-lg p-3">
+          <div class="shadow-lg p-3 aaa">
             <div class="icon">
-              <i class="fa-solid fa-hand-holding-heart"></i>
+              <i class="fa-solid fa-city"></i>
             </div>
             <p class="text-grey mt-3 mb-0">Year of Establishment</p>
             <p>2022</p>
           </div>
         </div>
         <div class="col-lg-4 mt-3">
-          <div class="shadow-lg p-3">
+          <div class="shadow-lg p-3 aaa">
             <div class="icon">
               <i class="fa-regular fa-user"></i>
             </div>
@@ -251,7 +254,7 @@
         <div class="column nature col-md-4">
          <a href="onion.html#onion" class="text-decoration-none nav-link">
           <div class="content">
-            <img src="assets/images/fresh-red-onion-1607515951-5652344.jpeg" alt="Mountains" style="width:100%">
+            <img src="assets/images/fresh-red-onion-1607515951-5652344.jpeg" class="img-fluid" alt="Mountains" style="width:100%">
             <div class="view d-flex justify-content-center align-content-center">
               <div class="detailhover">
                 <a href="onion.html" class="btn btn-dark p-2">View Detail</a>
