--- a/tomoto.html
+++ b/tomoto.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PRAMUKHEXIM</title>
+    <link rel="shortcut icon" href="assets/images/LOGO.jpg"  type="image/xicon">
     
     <link
       rel="stylesheet"
@@ -24,6 +25,7 @@
 
     <nav class="navbar navbar-expand-lg bg-black fixed-top" id="navba">
       <div class="container-fluid text-white">
+        <img src="assets/images/LOGO-removebg-preview.png" class="bg-white img-fluid rounded rounded-3" style="width: 50px;"  >
         <a class="navbar-brand fs-1 ms-3" href="#">PRAMUKHEXIM</a>
         <button
           class="navbar-toggler"
