--- a/About.html
+++ b/About.html
@@ -109,6 +109,15 @@
         </div>
       </nav>
     
+
+<!-- about slide -->
+
+<div class="aboutslide" data-aos="zoom-in" data-aos-delay="50"
+data-aos-duration="1500">
+<h1 class="text-center ">About Us</h1>
+</div>
+
+
     <!--  about -->
     <div class="container top" data-aos="fade-up"
     data-aos-duration="3000">
@@ -188,6 +197,7 @@
             </ul>
             <p class="copyright">PRAMUKHEXIM © 2018</p>
         </footer>
+
     </div>
 
 
