--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
 
        <!-- logo carousel-start -->
-<div class="logos bg-white mt-5">
+<div class="logos bg-white mt-5 mb-5">
   <div class="logos-slide">
     <img src="./assets/images/APEDA.png" />
     <img src="./assets/images/FSSAI.png" />
@@ -259,7 +259,7 @@
     <!-- product base -->
 
 
-    <div class="main" id="gallery">
+    <div class="main mt-5" id="gallery">
 
       <div class="text-center">
         <h1>Gallery</h1>
