--- a/About.html
+++ b/About.html
@@ -117,7 +117,6 @@ data-aos-duration="1500">
 <h1 class="text-center ">About Us</h1>
 </div>
 
-
     <!--  about -->
     <div class="container top" data-aos="fade-up"
     data-aos-duration="3000">
@@ -172,7 +171,56 @@ data-aos-duration="1500">
         </div>
 
 
+        <div class="container mt5">
+          <h2 class="text-center headingtext" data-aos="zoom-in" data-aos-delay="50"
+          data-aos-duration="1500">
+            Our Mission
+          </h2>
+          <div class="row row-cols-lg-2 row-cols-1">
+            <div class="col" data-aos="fade-right" data-aos-delay="50"
+          data-aos-duration="1500">
+              <img src="assets/images/our vision.jpg" class="img-fluid" alt="" width="100%" height="auto">
+              </div>
+              <div class="col d-flex align-items-center" data-aos="fade-lef" data-aos-delay="50"
+          data-aos-duration="1500">
+                <div class="pera">
+                  <p class="font-monospace">
+                    To grow as a sustainable supplier of agricultural produce and food ensuring good agricultural practices, supply efficiency, quality production, efficient logistics and affordable price, all in environment friendly manner.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
 
+
+
+
+       <!-- logo carousel-start -->
+       <div class="logos bg-white mt-5 mb-5">
+        <div class="logos-slide">
+          <img src="./assets/images/APEDA.png" />
+          <img src="./assets/images/FSSAI.png" />
+          <img src="./assets/images/APEDA.png" />
+          <img src="./assets/images/internatinal.png" />
+          <img src="./assets/images/Spices_Board_of_India_Logo.png" />
+          <!-- <img src="./images/client-6.png" />
+          <img src="./images/client-7.png" />
+          <img src="./images/client-8.png" /> -->
+        </div>
+      
+        <div class="logos-slide">
+          <img src="./assets/images/APEDA.png" />
+          <img src="./assets/images/FSSAI.png" />
+          <img src="./assets/images/APEDA.png" />
+          <img src="./assets/images/internatinal.png" />
+          <img src="./assets/images/Spices_Board_of_India_Logo.png" />
+          <!-- <img src="./images/client-6.png" />
+          <img src="./images/client-7.png" />
+          <img src="./images/client-8.png" /> -->
+        </div>
+      </div>
+      <!-- logo carousel-end -->
+      
 
 
     </div>
@@ -200,6 +248,11 @@ data-aos-duration="1500">
 
     </div>
 
+     <!-- copyright footer-start -->
+ <div class="container-fluid py-3 text-center mt-0 " style="background-color: #ccc;">
+  <p class="text-white m-0 fw-bold"><span class="fs-4 pe-1">&copy;</span>Copyright  <span style="font-size: 18px;font-weight: bold;">&nbsp;Pramukh
+      Exim</span>. All Rights Reserved</p>
+</div>
 
     <!-- scroll animation -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
