--- a/ceriti.html
+++ b/ceriti.html
@@ -177,8 +177,27 @@
     </div>
   </nav>
 
-  <div class="top text-center fs-1 fw-bolder">
+
+  <div class="Certificatealide" data-aos="zoom-in" data-aos-delay="50"
+data-aos-duration="1500">
+<h1 class="text-center ">Certificate</h1>
+</div>
+
+  <div class="top text-center fs-1 fw-bolder headingtext">
     Certificate
+  </div>
+
+
+  <div class="container mt-5">
+
+    <p class="font-monospace text-start text-secondary" data-aos="zoom-in" data-aos-delay="50"
+    data-aos-duration="1500">When it comes to food , vegetabale and masala handling and export, maintaining high levels of hygiene, quality and safety are crucial. This is why, at Pisum, we meet international food safety and quality standards through various quality checks and following strict protocols throughout the process. This has allowed us to be accredited to a number of quality and food safety certifications.</p>
+
+    <p class="mt-5 font-monospace text-secondary" data-aos="zoom-in" data-aos-delay="50"
+    data-aos-duration="1500">
+      Being accredited to FASAI, APEDA, and other certifications, we make sure the entire process meets the top quality and food safety standards. Be it the food handling, packaging, or processing, we make sure that everything is done in accordance with the stringent protocols. We are an Indian government-certified exporter of food products.
+    </p>
+
   </div>
 
 
@@ -198,6 +217,18 @@
               Import Exporter Code
              </div>
         </div>
+        <div class="col-lg-4" data-aos="fade-up" data-aos-duration="3000">
+            <img class="myImg" src="assets/images/fasai certi.jpg" alt="FSSAI License" style="width:100%;max-width:300px"; height="400px">
+            <div>
+              FSSAI License
+             </div>
+        </div>
+        <div class="col-lg-4 mt-5 bg-white" data-aos="fade-up" data-aos-duration="3000">
+            <img class="myImg" src="assets/images/apeda certi.jpg" alt="APEDA License" style="width:100%;max-width:300px"; height="400px">
+            <div>
+              APEDA License
+             </div>
+        </div>
         <!-- <div class="col-lg-4">
             <img class="myImg" src="assets/images/fresh-green-chilli-1607515482-5652326.jpeg" alt="Yet Another Image" style="width:100%;max-width:300px; height:200px;">
         </div> -->
@@ -213,6 +244,32 @@
         <div class="caption"></div>
     </div>
 
+
+        <!-- logo carousel-start -->
+<div class="logos bg-white mt-5 mb-5">
+  <div class="logos-slide">
+    <img src="./assets/images/APEDA.png" />
+    <img src="./assets/images/FSSAI.png" />
+    <img src="./assets/images/APEDA.png" />
+    <img src="./assets/images/internatinal.png" />
+    <img src="./assets/images/Spices_Board_of_India_Logo.png" />
+    <!-- <img src="./images/client-6.png" />
+    <img src="./images/client-7.png" />
+    <img src="./images/client-8.png" /> -->
+  </div>
+
+  <div class="logos-slide">
+    <img src="./assets/images/APEDA.png" />
+    <img src="./assets/images/FSSAI.png" />
+    <img src="./assets/images/APEDA.png" />
+    <img src="./assets/images/internatinal.png" />
+    <img src="./assets/images/Spices_Board_of_India_Logo.png" />
+    <!-- <img src="./images/client-6.png" />
+    <img src="./images/client-7.png" />
+    <img src="./images/client-8.png" /> -->
+  </div>
+</div>
+<!-- logo carousel-end -->
 
     <!-- footer -->
 
@@ -234,6 +291,12 @@
           <p class="copyright">PRAMUKHEXIM © 2018</p>
       </footer>
   </div>
+
+   <!-- copyright footer-start -->
+ <div class="container-fluid py-3 text-center mt-0 " style="background-color: #ccc;">
+  <p class=" m-0 fw-bold"><span class="fs-4 pe-1">&copy;</span>Copyright  <span style="font-size: 18px;font-weight: bold;">&nbsp;Pramukh
+      Exim</span>. All Rights Reserved</p>
+</div>
 
     <script>
         var modal = document.getElementById("myModal");
