--- a/index.html
+++ b/index.html
@@ -116,34 +116,25 @@
       <!-- Full-width assets/images with number and caption text -->
       <div class="mySlides carousel-fade">
         <div class="numbertext">1 / 3</div>
-        <img src="assets/images/bg-masala.jpg" class="img-fluid" style="width: 100%" />
+        <img src="assets/images/bg-masala.jpg" class="img-fluid object-fit-cover" style="width: 100%" />
         <div class="text">Masala</div>
       </div>
 
       <div class="mySlides carousel-fade">
         <div class="numbertext">2 / 3</div>
-        <img src="assets/images/bg-vegetabale.jpg" class="img-fluid" style="width: 100%" />
+        <img src="assets/images/bg-vegetabale.jpg" class="img-fluid object-fit-cover" style="width: 100%" />
         <div class="text">Vegetabale</div>
       </div>
 
       <div class="mySlides carousel-fade">
         <div class="numbertext">3 / 3</div>
-        <img src="assets/images/home_slide2.jpg" class="img-fluid" style="width: 100%" />
+        <img src="assets/images/home_slide2.jpg" class="img-fluid object-fit-cover" style="width: 100%" />
         <div class="text">Masala</div>
       </div>
 
-      <!-- Next and previous buttons -->
-      <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
     </div>
     <br />
 
-    <!-- The dots/circles -->
-    <!-- <div style="text-align: center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div> -->
 
     <!-- about us -->
 
@@ -262,7 +253,7 @@
     <div class="main mt-5" id="gallery">
 
       <div class="text-center">
-        <h1>Gallery</h1>
+        <h1>Our Products</h1>
       <hr>
       
       </div>
@@ -528,8 +519,8 @@
 
     <!-- footer -->
 
-    <div class="container-fluid bg-black">
-      <div class="row  text-white w-100 ">
+    <div class="container-fluid bg-black mb-0 m-0">
+      <div class="row  text-white m-0">
           <div class="col-md-4 col-sm-12">
               <div class="card cardcolor text-white border-0 ms-3" >
                   <img src="assets/images/LOGO.jpg" class="p-4 img-fluid"  alt="...">
@@ -622,7 +613,11 @@
           <a href="#Contact" class="text-decoration-none text-white ps-4"> contact</a>
       </div> -->
       
-
+ <!-- copyright footer-start -->
+ <div class="container-fluid py-3 text-center mt-0 bg-secondary"  ;>
+  <p class="text-white m-0 fw-bold"><span class="fs-4 pe-1">&copy;</span>Copyright  <span style="font-size: 18px;font-weight: bold;">&nbsp;Pramukh
+      Exim</span>. All Rights Reserved</p>
+</div>
 
 
 
