--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,7 @@
 
   <style>
     .myImg {
+      object-fit: cover;
       border-radius: 5px;
       cursor: pointer;
       transition: 0.3s;
@@ -199,6 +200,14 @@
       </div>
     </nav>
 
+    <!-- gallery slide -->
+
+<div class="galleryslide" data-aos="zoom-in" data-aos-delay="50"
+data-aos-duration="1500">
+<h1 class="text-center ">GALLERY</h1>
+</div>
+
+
     <!-- gallery -->
 
     <div class="container top">
@@ -213,7 +222,7 @@
         <h1>Vegetabale</h1>
       </div>
 
-      <div class="col-lg-3 mt-3 card p-3">
+      <div class="col-lg-3 mt-3 c p-3">
         <img
           class="myImg"
           src="assets/images/fresh-red-onion-1607515951-5652344.jpeg"
@@ -222,10 +231,10 @@
         />
         <div class="d-flex">
           <a href="onion.html" class="fs-4 nav-link me-3">Onion</a>
-          <a href="onion.html" class="btn btndark p-1 mt-2">View Detail</a>
+          <!-- <a href="onion.html" class="btn btndark p-1 mt-2">View Detail</a> -->
         </div>
       </div>
-      <div class="col-lg-3 mt-3 card">
+      <div class="col-lg-3 mt-3 ">
         <img
           class="myImg"
           src="assets/images/fresh-drumstick-1607515801-5652338.jpeg"
@@ -236,7 +245,7 @@
         />
         <div class="d-flex">
             <a href="drumstick.html" class="fs-4 nav-link me-3">Drumstick</a>
-            <a href="drumstick.html" class="btn btn-dark p-1 mt-2">View Detail</a>
+            <!-- <a href="drumstick.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
           </div>
       </div>
       <div class="col-lg-3 mt-3">
@@ -250,7 +259,7 @@
         />
         <div class="d-flex">
             <a href="chili.html" class="fs-4 nav-link me-3">chili</a>
-            <a href="chili.html" class="btn btn-dark p-1 mt-2">View Detail</a>
+            <!-- <a href="chili.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
           </div>
       </div>
       <div class="col-lg-3 mt-3">
@@ -264,7 +273,35 @@
         />
         <div class="d-flex">
             <a href="tomoto.html" class="fs-4 nav-link me-3">tomoto</a>
-            <a href="tomoto.html" class="btn btn-dark p-1 mt-2">View Detail</a>
+            <!-- <a href="tomoto.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
+          </div>
+      </div>
+      <div class="col-lg-3 mt-3">
+        <img
+          class="myImg"
+          src="assets/images/red chill.jpg"
+          alt="tomoto"
+          style="width: 100%;  height:250px; max-height: 250px;"
+          ;
+          height="400px"
+        />
+        <div class="d-flex">
+            <a href="tomoto.html" class="fs-4 nav-link me-3">red chili</a>
+            <!-- <a href="tomoto.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
+          </div>
+      </div>
+      <div class="col-lg-3 mt-3">
+        <img
+          class="myImg"
+          src="assets/images/red chill 2.jpg"
+          alt="red chili"
+          style="width: 100%;  height:250px; "
+          ;
+          height="400px"
+        />
+        <div class="d-flex">
+            <a href="tomoto.html" class="fs-4 nav-link me-3">red chili</a>
+            <!-- <a href="tomoto.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
           </div>
       </div>
      
@@ -287,7 +324,7 @@
         />
         <div class="d-flex">
           <a href="mango.html" class="fs-4 nav-link me-3">Mango</a>
-          <a href="mango.html" class="btn btn-dark p-1 mt-2">View Detail</a>
+          <!-- <a href="mango.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
         </div>
       </div>
       <div class="col-lg-4 mt-3">
@@ -301,7 +338,7 @@
         />
         <div class="d-flex">
             <a href="banana.html" class="fs-4 nav-link me-3">Banana</a>
-            <a href="banana.html" class="btn btn-dark p-1 mt-2">View Detail</a>
+            <!-- <a href="banana.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
           </div>
       </div>
       <div class="col-lg-4 mt-3">
@@ -315,7 +352,7 @@
         />
         <div class="d-flex">
             <a href="Pomegranate.html" class="fs-4 nav-link me-3">Pomegranate</a>
-            <a href="Pomegranate.html" class="btn btn-dark p-1 mt-2">View Detail</a>
+            <!-- <a href="Pomegranate.html" class="btn btn-dark p-1 mt-2">View Detail</a> -->
           </div>
       </div>
       
